ipc/ipdl/test/ipdl/error/cyclecheck_Child.ipdl
include protocol cyclecheck_Parent;
include protocol cyclecheck_Grandchild;

protocol cyclecheck_Child {
    manager cyclecheck_Parent;
    manages cyclecheck_Grandchild;

child:
    cyclecheck_Grandchild();
    __delete__();
};

